--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.11.1",
+    "css-loader": "^0.26.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "sass-loader": "4.1.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   }
 }
