--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.26.1",
     "file-loader": "^0.10.0",
+    "firebase": "^3.6.10",
     "node-sass": "^4.5.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
