--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "file-loader": "^0.10.0",
     "firebase": "^3.6.10",
     "node-sass": "^4.5.0",
-    "react": "^15.3.1",
+    "react": "^15.4.2",
+    "react-avatar-cropper": "^0.1.3",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.3.1",
     "react-router": "^3.0.2",
     "sass-loader": "4.1.1",
